# fuzzr

./: Cargo.toml  README.md  SPEC.md  wordlist.txt
src/: error.rs  filter.rs  lib.rs  main.rs
src/http/: filter.rs
src/parser/: args.rs  http.rs  mod.rs
src/parser/http/: args.rs  filter.rs  mod.rs
