[package]
name = "fuzzr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
rayon = "1.5.3"
regex = "1.5.6"

[profile.release]
strip = true
